--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,3 @@
 NODE_ENV=local
 API_URL=http://dev-gateway.pc.ishare.iasktest.com/gateway
+browserBaseURL=http://dev-gateway.pc.ishare.iasktest.com/gateway
