--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-vue": "^7.4.1",
     "less": "^4.1.0",
     "less-loader": "^7.2.1",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "vconsole": "^3.4.0"
   }
 }
