--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "stop": "pm2 stop pm2.json",
     "local": "cross-env NODE_ENV=local nodemon ./server/index.js",
-    "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server.js",
+    "dev-build": "cross-env NODE_ENV=dev nuxt build",
+    "dev-start": "cross-env NODE_ENV=dev  pm2 start pm2.json",
+    "test-build": "cross-env NODE_ENV=test nuxt build",
+    "test-start": "cross-env NODE_ENV=test  pm2 start pm2.json",
+    "pre-build": "cross-env NODE_ENV=pre nuxt build",
+    "pre-start": "cross-env NODE_ENV=pre  pm2 start pm2.json",
+    "prod-build": "cross-env NODE_ENV=prod nuxt build",
+    "prod-start": "cross-env NODE_ENV=prod  pm2 start pm2.json",
     "generate": "nuxt generate",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
