--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,3 @@
 NODE_ENV=dev
 API_URL=http://dev-gateway.pc.ishare.iasktest.com/gateway
-browserBaseURL=''
+browserBaseURL=http://dev-gateway.pc.ishare.iasktest.com/gateway
