--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "koa-nuxt",
-  "version": "1.0.0",
+  "name": "ishare-payment-system",
+  "version": "1.0.5",
   "private": true,
   "scripts": {
     "stop": "pm2 stop pm2.json",
@@ -21,6 +21,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.12.5",
     "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/sentry": "^5.0.0",
     "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.8.2",
     "koa": "^2.13.1",
@@ -28,6 +29,8 @@
     "pm2": "^4.5.1"
   },
   "devDependencies": {
+    "@sentry/cli": "^1.61.0",
+    "@sentry/webpack-plugin": "^1.14.0",
     "cross-env": "^7.0.3",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.4.1",
