--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
 NODE_ENV=local
 API_URL=http://dev-gateway.pc.ishare.iasktest.com/gateway
 browserBaseURL=http://dev-gateway.pc.ishare.iasktest.com/gateway
+static_url = ''
