添加环境变量

--- a/.env.local
+++ b/.env.local
@@ -2,3 +2,4 @@ NODE_ENV=local
 API_URL=http://dev-gateway.pc.ishare.iasktest.com/gateway
 browserBaseURL=http://dev-gateway.pc.ishare.iasktest.com/gateway
 static_url = ''
+host = http://dev-open-ishare.iask.com.cn
