--- a/.env.pre
+++ b/.env.pre
@@ -1,4 +1,5 @@
 NODE_ENV=pre
 API_URL=http://pre-gateway.pc.ishare.iaskonline.com/gateway
 browserBaseURL=''
-static_url = //pre-static3.iask.cn/
+static_url = //pre-static3.iask.cn
+host = http://pre-open-ishare.iask.com.cn
