--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,5 @@
 NODE_ENV=test
 API_URL=http://test-gateway.pc.ishare.iasktest.com/gateway
 browserBaseURL=''
-static_url = //test-static3.iask.cn/
+static_url = //test-static3.iask.cn
+host = http://dev-open-ishare.iask.com.cn
