修改环境变量

--- a/.env.dev
+++ b/.env.dev
@@ -1,5 +1,5 @@
 NODE_ENV=dev
 API_URL=http://dev-gateway.pc.ishare.iasktest.com/gateway
-browserBaseURL=http://dev-gateway.pc.ishare.iasktest.com/gateway
+browserBaseURL=http://dev-open-ishare.iask.com.cn/openapi
 static_url = //dev-static3.iask.cn
 host = http://dev-open-ishare.iask.com.cn
