--- a/.env.pre
+++ b/.env.pre
@@ -1,5 +1,5 @@
 NODE_ENV=pre
 API_URL=http://pre-gateway.pc.ishare.iaskonline.com/gateway
-browserBaseURL=''
+browserBaseURL=http://pre-open-ishare.iask.com.cn/openapi
 static_url = //pre-static3.iask.cn
 host = http://pre-open-ishare.iask.com.cn
