--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,5 @@
 NODE_ENV=prod
 API_URL=http://gateway.pc.ishare.iaskonline.com/gateway
-browserBaseURL=''
+browserBaseURL=http://open-ishare.iask.com.cn/openapi
 static_url = //static3.iask.cn
 host = http://open-ishare.iask.com.cn
