--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,5 @@
 NODE_ENV=test
 API_URL=http://test-gateway.pc.ishare.iasktest.com/gateway
-browserBaseURL=http://test-open-ishare.iask.com.cn/gateway
+browserBaseURL=http://test-open-ishare.iask.com.cn/openapi
 static_url = //test-static3.iask.cn
 host = http://test-open-ishare.iask.com.cn
