--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
   "devDependencies": {
     "@sentry/cli": "^1.61.0",
     "@sentry/webpack-plugin": "^1.14.0",
+    "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
+    "eslint": "^7.18.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-vue": "^7.4.1",
     "less": "^4.1.0",
     "less-loader": "^7.2.1",
