--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ishare-payment-system",
-  "version": "1.0.0",
+  "version": "20211281136",
   "private": true,
   "scripts": {
     "stop": "pm2 stop pm2.json",
