--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test-start": "cross-env NODE_ENV=test  pm2 start pm2.json",
     "pre-build": "cross-env NODE_ENV=pre nuxt build",
     "pre-start": "cross-env NODE_ENV=pre  pm2 start pm2.json",
-    "prod-build": "cross-env NODE_ENV=prod nuxt build",
-    "prod-start": "cross-env NODE_ENV=prod  pm2 start pm2.json",
+    "build": "cross-env NODE_ENV=prod nuxt build",
+    "start": "cross-env NODE_ENV=prod  pm2 start pm2.json",
     "generate": "nuxt generate",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
@@ -26,7 +26,10 @@
     "core-js": "^3.8.2",
     "koa": "^2.13.1",
     "nuxt": "^2.14.12",
-    "pm2": "^4.5.1"
+    "nuxt-winston-log": "^1.2.0",
+    "pm2": "^4.5.1",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.0"
   },
   "devDependencies": {
     "@sentry/cli": "^1.61.0",
