--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "winston-daily-rotate-file": "^4.5.0"
   },
   "devDependencies": {
+    "@nuxtjs/proxy": "^2.1.0",
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
