--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ishare-payment-system",
   "version": "1.0.0",
-  "ishare-payment-system-vsersion": "20211291515",
+  "ishare-payment-system-version": "20211291703",
   "private": true,
   "scripts": {
     "stop": "pm2 stop pm2.json",
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@nuxtjs/proxy": "^2.1.0",
+    "@sentry/webpack-plugin": "^1.14.0",
     "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
