--- a/.dev-sentryclirc
+++ b/.dev-sentryclirc
@@ -3,7 +3,7 @@
 [defaults]
 url = http://192.168.1.199:9000/
 org = sentry
-project = ishare-payment-system
+project = koa-nuxt-sentry
 [auth]
 # 身份令牌 在sentry服务端 setting-》accout->api->auth Tokens 创建一个新的就好
 # 注意这里要有project:write 权限 下面我会给出具体页面，看着上面路径进去就好。
